--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -24,24 +24,23 @@
 
 .docsIndex {
   max-width: 80rem;
-  margin-left: auto;
-  margin-right: auto;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin: 1rem 2rem;
+  margin: 1rem auto;
 }
 
 .docsEntry {
   width: 100%;
   margin-bottom: 0.5rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 @media screen and (min-width: 768px) {
   .docsEntry {
     width: 40%;
-    margin-left: 0.5rem;
-    margin-bottom: 0.5rem;
+    margin-right: 0;
   }
 }
 
